tf-6 Made some additional changes to all the links on the site to make sure they flowed properly.

--- a/FowlerSite/Views/Home/ContactUs.cshtml
+++ b/FowlerSite/Views/Home/ContactUs.cshtml
@@ -252,7 +252,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-product.html">
+                                    <a asp-action="StoreProduct">
                                         Product
 
                                     </a>
@@ -270,7 +270,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-checkout.html">
+                                    <a asp-controller="Store" asp-action="StoreCheckout">
                                         Checkout
 
                                     </a>
