--- a/FowlerSite/Views/Store/StoreProduct.cshtml
+++ b/FowlerSite/Views/Store/StoreProduct.cshtml
@@ -142,24 +142,24 @@
                             <div class="nk-cart-dropdown">
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-5-xs.jpg" alt="In all revolutions of">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">In all revolutions of</a>
+                                        <a asp-action="StoreProduct">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-7-xs.jpg" alt="With what mingled joy">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">With what mingled joy</a>
+                                        <a asp-action="StoreProduct">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-price">$ 14.00</div>
@@ -167,7 +167,7 @@
 
                                 <div class="nk-gap-2"></div>
                                 <div class="text-center">
-                                    <a href="store-checkout.html" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
+                                    <a asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
                                 </div>
                             </div>
                         </li>
@@ -720,11 +720,11 @@
 
                         <div class="col-md-6">
                             <div class="nk-product-cat">
-                                <a class="nk-product-image" href="store-product.html">
+                                <a class="nk-product-image" asp-action="StoreProduct">
                                     <img src="~/assets/images/product-11-xs.jpg" alt="She gave my mother">
                                 </a>
                                 <div class="nk-product-cont">
-                                    <h3 class="nk-product-title h5"><a href="store-product.html">She gave my mother</a></h3>
+                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">She gave my mother</a></h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="3"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
@@ -736,11 +736,11 @@
 
                         <div class="col-md-6">
                             <div class="nk-product-cat">
-                                <a class="nk-product-image" href="store-product.html">
+                                <a class="nk-product-image" asp-action="StoreProduct">
                                     <img src="~/assets/images/product-12-xs.jpg" alt="A hundred thousand">
                                 </a>
                                 <div class="nk-product-cont">
-                                    <h3 class="nk-product-title h5"><a href="store-product.html">A hundred thousand</a></h3>
+                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">A hundred thousand</a></h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                                     <div class="nk-gap-1"></div>
@@ -752,11 +752,11 @@
 
                         <div class="col-md-6">
                             <div class="nk-product-cat">
-                                <a class="nk-product-image" href="store-product.html">
+                                <a class="nk-product-image" asp-action="StoreProduct">
                                     <img src="~/assets/images/product-13-xs.jpg" alt="So saying he unbuckled">
                                 </a>
                                 <div class="nk-product-cont">
-                                    <h3 class="nk-product-title h5"><a href="store-product.html">So saying he unbuckled</a></h3>
+                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">So saying he unbuckled</a></h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
@@ -768,11 +768,11 @@
 
                         <div class="col-md-6">
                             <div class="nk-product-cat">
-                                <a class="nk-product-image" href="store-product.html">
+                                <a class="nk-product-image" asp-action="StoreProduct">
                                     <img src="~/assets/images/product-14-xs.jpg" alt="However, I have reason">
                                 </a>
                                 <div class="nk-product-cont">
-                                    <h3 class="nk-product-title h5"><a href="store-product.html">However, I have reason</a></h3>
+                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">However, I have reason</a></h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="1.5"> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
@@ -784,11 +784,11 @@
 
                         <div class="col-md-6">
                             <div class="nk-product-cat">
-                                <a class="nk-product-image" href="store-product.html">
+                                <a class="nk-product-image" asp-action="StoreProduct">
                                     <img src="~/assets/images/product-15-xs.jpg" alt="At first, for some time">
                                 </a>
                                 <div class="nk-product-cont">
-                                    <h3 class="nk-product-title h5"><a href="store-product.html">At first, for some time</a></h3>
+                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">At first, for some time</a></h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
@@ -800,11 +800,11 @@
 
                         <div class="col-md-6">
                             <div class="nk-product-cat">
-                                <a class="nk-product-image" href="store-product.html">
+                                <a class="nk-product-image" asp-action="StoreProduct">
                                     <img src="~/assets/images/product-16-xs.jpg" alt="When the last &#39;natural&#39;">
                                 </a>
                                 <div class="nk-product-cont">
-                                    <h3 class="nk-product-title h5"><a href="store-product.html">When the last &#39;natural&#39;</a></h3>
+                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">When the last &#39;natural&#39;</a></h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                                     <div class="nk-gap-1"></div>
@@ -931,28 +931,28 @@
                             <div class="nk-widget-content">
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-1-xs.jpg" alt="So saying he unbuckled">
                                     </a>
-                                    <h3 class="nk-post-title"><a href="store-product.html">So saying he unbuckled</a></h3>
+                                    <h3 class="nk-post-title"><a asp-action="StoreProduct">So saying he unbuckled</a></h3>
                                     <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-2-xs.jpg" alt="However, I have reason">
                                     </a>
-                                    <h3 class="nk-post-title"><a href="store-product.html">However, I have reason</a></h3>
+                                    <h3 class="nk-post-title"><a asp-action="StoreProduct">However, I have reason</a></h3>
                                     <div class="nk-product-rating" data-rating="2.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-product-price">$ 32.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-3-xs.jpg" alt="It was some time before">
                                     </a>
-                                    <h3 class="nk-post-title"><a href="store-product.html">It was some time before</a></h3>
+                                    <h3 class="nk-post-title"><a asp-action="StoreProduct">It was some time before</a></h3>
                                     <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
                                     <div class="nk-product-price">$ 14.00</div>
                                 </div>
