--- a/FowlerSite/Views/Store/StoreCart.cshtml
+++ b/FowlerSite/Views/Store/StoreCart.cshtml
@@ -141,24 +141,24 @@
                             <div class="nk-cart-dropdown">
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-5-xs.jpg" alt="In all revolutions of">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">In all revolutions of</a>
+                                        <a asp-action="StoreProduct">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-7-xs.jpg" alt="With what mingled joy">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">With what mingled joy</a>
+                                        <a asp-action="StoreProduct">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-price">$ 14.00</div>
@@ -166,7 +166,7 @@
 
                                 <div class="nk-gap-2"></div>
                                 <div class="text-center">
-                                    <a href="store-checkout.html" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
+                                    <a asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
                                 </div>
                             </div>
                         </li>
@@ -463,7 +463,7 @@
 
                             <tr>
                                 <td class="nk-product-cart-thumb">
-                                    <a href="store-product.html" class="nk-image-box-1 nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-image-box-1 nk-post-image">
                                         <img src="~/assets/images/product-2-xs.jpg" alt="However, I have reason" width="115">
                                     </a>
                                 </td>
@@ -472,7 +472,7 @@
                                     <div class="nk-gap-1"></div>
 
                                     <h2 class="nk-post-title h4">
-                                        <a href="store-product.html">However, I have reason</a>
+                                        <a asp-action="StoreProduct">However, I have reason</a>
                                     </h2>
                                 </td>
                                 <td class="nk-product-cart-price">
@@ -500,7 +500,7 @@
 
                             <tr>
                                 <td class="nk-product-cart-thumb">
-                                    <a href="store-product.html" class="nk-image-box-1 nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-image-box-1 nk-post-image">
                                         <img src="~/assets/images/product-4-xs.jpg" alt="She was bouncing" width="115">
                                     </a>
                                 </td>
@@ -509,7 +509,7 @@
                                     <div class="nk-gap-1"></div>
 
                                     <h2 class="nk-post-title h4">
-                                        <a href="store-product.html">She was bouncing</a>
+                                        <a asp-action="StoreProduct">She was bouncing</a>
                                     </h2>
                                 </td>
                                 <td class="nk-product-cart-price">
@@ -610,7 +610,7 @@
                 </div>
 
                 <div class="nk-gap-2"></div>
-                <a class="nk-btn nk-btn-rounded nk-btn-color-main-1 float-right" href="store-checkout.html">Proceed to Checkout</a>
+                <a class="nk-btn nk-btn-rounded nk-btn-color-main-1 float-right" asp-action="StoreCheckout">Proceed to Checkout</a>
                 <div class="clearfix"></div>
             </div>
         </div>
