--- a/FowlerSite/Views/Store/StoreCheckout.cshtml
+++ b/FowlerSite/Views/Store/StoreCheckout.cshtml
@@ -142,24 +142,24 @@
                             <div class="nk-cart-dropdown">
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-5-xs.jpg" alt="In all revolutions of">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">In all revolutions of</a>
+                                        <a asp-action="StoreProduct">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
+                                    <a asp-action="StoreProduct" class="nk-post-image">
                                         <img src="~/assets/images/product-7-xs.jpg" alt="With what mingled joy">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">With what mingled joy</a>
+                                        <a asp-action="StoreProduct">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-price">$ 14.00</div>
@@ -167,7 +167,7 @@
 
                                 <div class="nk-gap-2"></div>
                                 <div class="text-center">
-                                    <a href="store-checkout.html" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
+                                    <a asp-action="StoreCheckout" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
                                 </div>
                             </div>
                         </li>
