tf-1 Fixed links on home page and deleted the double navigation bar.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -12,49 +12,6 @@
     <meta name="keywords" content="game, gaming, template, HTML template, responsive, Bootstrap, premium">
     <meta name="author" content="_nK">
 
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- START: Styles -->
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:400,700" rel="stylesheet" type="text/css">
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-grid.css">
-    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-reboot.css" >
-
-    <!-- FontAwesome -->
-    <script defer src="assets/vendor/fontawesome-free/js/all.js"></script>
-    <script defer src="assets/vendor/fontawesome-free/js/v4-shims.js"></script>
-
-    <!-- IonIcons -->
-    <link rel="stylesheet" href="assets/vendor/ionicons/css/ionicons.min.css">
-
-    <!-- Flickity -->
-    <link rel="stylesheet" href="assets/vendor/flickity/dist/flickity.min.css">
-
-    <!-- Photoswipe -->
-    <link rel="stylesheet" type="text/css" href="assets/vendor/photoswipe/dist/photoswipe.css">
-    <link rel="stylesheet" type="text/css" href="assets/vendor/photoswipe/dist/default-skin/default-skin.css">
-
-    <!-- Seiyria Bootstrap Slider -->
-    <link rel="stylesheet" href="assets/vendor/bootstrap-slider/dist/css/bootstrap-slider.min.css">
-
-    <!-- Summernote -->
-    <link rel="stylesheet" type="text/css" href="assets/vendor/summernote/dist/summernote-bs4.css">
-
-    <!-- GoodGames -->
-    <link rel="stylesheet" href="assets/css/goodgames.css">
-
-    <!-- Custom Styles -->
-    <link rel="stylesheet" href="assets/css/custom.css">
-
-    <!-- END: Styles -->
-    <!-- jQuery -->
-    <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
-
 
 </head>
 
@@ -182,220 +139,6 @@
                 .nk-navbar-transparent
                 .nk-navbar-autohide
         -->
-        <nav class="nk-navbar nk-navbar-top nk-navbar-sticky nk-navbar-autohide">
-            <div class="container">
-                <div class="nk-nav-table">
-
-                    <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/images/logo.png" alt="GoodGames" width="199">
-                    </a>
-
-                    <ul class="nk-nav nk-nav-right d-none d-lg-table-cell" data-nav-mobile="#nk-nav-mobile">
-
-                        <li class=" nk-drop-item">
-                            <a href="elements.html">
-                                Features
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="elements.html">
-                                        Elements (Shortcodes)
-
-                                    </a>
-                                </li>
-                                <li class=" nk-drop-item">
-                                    <a href="forum.html">
-                                        Forum
-
-                                    </a><ul class="dropdown">
-
-                                        <li>
-                                            <a href="forum.html">
-                                                Forum
-
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="forum-topics.html">
-                                                Topics
-
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="forum-single-topic.html">
-                                                Single Topic
-
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="active">
-                                    <a href="@Url.Action("ContactUs","Home")">
-                                        Contact Us
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="coming-soon.html">
-                                        Coming Soon
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="offline.html">
-                                        Offline
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="404.html">
-                                        404
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="blog-list.html">
-                                Blog
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="news.html">
-                                        News
-
-                                    </a>
-                                </li>
-                                <li class=" nk-drop-item">
-                                    <a href="blog-grid.html">
-                                        Blog With Sidebar
-
-                                    </a><ul class="dropdown">
-
-                                        <li>
-                                            <a href="blog-grid.html">
-                                                Blog Grid
-
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="blog-list.html">
-                                                Blog List
-
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="blog-fullwidth.html">
-                                        Blog Fullwidth
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="blog-article.html">
-                                        Blog Article
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="gallery.html">
-                                Gallery
-
-                            </a>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="tournaments.html">
-                                Tournaments
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="tournaments.html">
-                                        Tournament
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tournaments-teams.html">
-                                        Teams
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tournaments-teammate.html">
-                                        Teammate
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="store.html">
-                                Store
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="store.html">
-                                        Store
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-product.html">
-                                        Product
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-catalog.html">
-                                        Catalog
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-catalog-alt.html">
-                                        Catalog Alt
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-checkout.html">
-                                        Checkout
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-cart.html">
-                                        Cart
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="nk-nav nk-nav-right nk-nav-icons">
-
-                        <li class="single-icon d-lg-none">
-                            <a href="#" class="no-link-effect" data-nav-toggle="#nk-nav-mobile">
-                                <span class="nk-icon-burger">
-                                    <span class="nk-t-1"></span>
-                                    <span class="nk-t-2"></span>
-                                    <span class="nk-t-3"></span>
-                                </span>
-                            </a>
-                        </li>
-
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <!-- END: Navbar -->
 
     </header>
@@ -510,8 +253,8 @@
                             <img src="assets/images/icon-mouse.png" alt="">
                         </div>
                         <div class="nk-feature-cont">
-                            <h3 class="nk-feature-title"><a href="#">PC</a></h3>
-                            <h4 class="nk-feature-title text-main-1"><a href="#">View Games</a></h4>
+                            <h3 class="nk-feature-title"><a asp-controller="Games" asp-action="Index">PC</a></h3>
+                            <h4 class="nk-feature-title text-main-1"><a asp-controller="Games" asp-action="Index">View Games</a></h4>
                         </div>
                     </div>
                 </div>
@@ -521,8 +264,8 @@
                             <img src="assets/images/icon-gamepad.png" alt="">
                         </div>
                         <div class="nk-feature-cont">
-                            <h3 class="nk-feature-title"><a href="#">PS4</a></h3>
-                            <h4 class="nk-feature-title text-main-1"><a href="#">View Games</a></h4>
+                            <h3 class="nk-feature-title"><a asp-controller="Games" asp-action="Index">PS4</a></h3>
+                            <h4 class="nk-feature-title text-main-1"><a asp-controller="Games" asp-action="Index">View Games</a></h4>
                         </div>
                     </div>
                 </div>
