--- a/FowlerSite/Views/Games/Details.cshtml
+++ b/FowlerSite/Views/Games/Details.cshtml
@@ -2,16 +2,17 @@
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <body class="DetailsBody">
-    <h1>Details</h1>
+    <h1 class="stuff">Details</h1>
 
     <div>
         <h4>Game</h4>
         <hr />
         <dl class="row">
-            <dt class = "col-sm-2 text-center">
+            <dt class = "col-sm-2">
                 @Html.DisplayNameFor(model => model.Name)
             </dt>
             <dd class = "col-sm-10">
