tf-1 added image capabilities with the games page.

--- a/FowlerSite/wwwroot/assets/css/site.css
+++ b/FowlerSite/wwwroot/assets/css/site.css
@@ -1,8 +1,4 @@
-﻿ .IndexBody{
-     color: white;
- }
-
- .stuff {
-     font-size: xx-small;
-     color: red;
+﻿ .gameImage {
+     height: 50px;
+     width: 50px;
  }
