tf-8 Added pictures to the details page to make them more ux friendly.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -235,7 +235,7 @@
                         </div>
                         <div class="nk-feature-cont">
                             <h3 class="nk-feature-title"><a href="#">Xbox</a></h3>
-                            <h4 class="nk-feature-title text-main-1"><a href="#">View Games</a></h4>
+                            <h4 class="nk-feature-title text-main-1"><a asp-controller="Games" asp-action="Index">View Games</a></h4>
                         </div>
                     </div>
                 </div>
