--- a/FowlerSite/Views/Games/Details.cshtml
+++ b/FowlerSite/Views/Games/Details.cshtml
@@ -7,36 +7,37 @@
 
 <body class="DetailsBody">
     <h1 class="stuff">Details</h1>
-
+    <img src="@Url.Content(Model.imagePath)" class="img-thumbnail float-right col-lg-6 col-md-12 col-sm-12" />
     <div>
         <h4>Game</h4>
         <hr />
         <dl class="row">
-            <dt class = "col-sm-2">
+            <dt class = "col-sm-4">
                 @Html.DisplayNameFor(model => model.Name)
             </dt>
-            <dd class = "col-sm-10">
+            <dd class = "col-sm-10 text-white">
                 @Html.DisplayFor(model => model.Name)
             </dd>
-            <dt class = "col-sm-2">
+            <dt class = "col-sm-4">
                 @Html.DisplayNameFor(model => model.Description)
             </dt>
-            <dd class = "col-sm-10">
+            <dd class = "col-sm-10 text-white">
                 @Html.DisplayFor(model => model.Description)
             </dd>
-            <dt class = "col-sm-2">
+            <dt class = "col-sm-4">
                 @Html.DisplayNameFor(model => model.Price)
             </dt>
-            <dd class = "col-sm-10">
+            <dd class = "col-sm-10 text-white">
                 @Html.DisplayFor(model => model.Price)
             </dd>
-            <dt class = "col-sm-2">
+            <dt class = "col-sm-4">
                 @Html.DisplayNameFor(model => model.Genre)
             </dt>
-            <dd class = "col-sm-10">
+            <dd class = "col-sm-10 text-white">
                 @Html.DisplayFor(model => model.Genre)
             </dd>
         </dl>
+        
     </div>
     <div>
         <a asp-action="Edit" asp-route-id="@Model.ProductID">Edit</a> |
