Contact us page populated

--- a/FowlerSite/Views/Home/ContactUs.cshtml
+++ b/FowlerSite/Views/Home/ContactUs.cshtml
@@ -352,6 +352,18 @@
                     </p>
 
                     <p>By using our contact form below we will be able to provide you with any assistance to any questions or concerns you may have.</p>
+
+                    <p><strong>Meet the team:</strong></p>
+
+                    <p>Casey
+                    <img src="~/assets/images/Casey.png" alt="casey.png" width="250"/></p>
+
+                    <p>Michael
+                    <img src="~/assets/images/Michael.jpg" alt="michael.jpg" width="250" /></p
+
+                    <p>Anthony</p>
+
+                    <p>Dominic</p>
                 </div>
                 <div class="col-lg-4">
                     <!--
