tf-8 Added some page navigation to a few nav bars and made some changes with the game buttons on the games page

--- a/FowlerSite/Views/Games/Index.cshtml
+++ b/FowlerSite/Views/Games/Index.cshtml
@@ -52,11 +52,11 @@
                     </td>
                     </tr>
                     <tr>
-                    <td>
-                        <h4 class="nk-feature-title text-main-1"><a asp-action="Purchase" asp-route-id="@item.ProductID">Add to cart    </a>|
-                        <a asp-action="Edit" asp-route-id="@item.ProductID">Edit    </a>|
-                        <a asp-action="Details" asp-route-id="@item.ProductID">Details    </a>|
-                        <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a></h4>
+                    <td colspan="5">
+                        <h4 class="nk-feature-title text-main-1 d-flex justify-content-end"><a asp-action="Purchase" asp-route-id="@item.ProductID">Add to cart&nbsp;&nbsp;&nbsp;</a>|
+                        <a asp-action="Edit" asp-route-id="@item.ProductID">&nbsp;&nbsp;&nbsp;Edit&nbsp;&nbsp;&nbsp;</a>|
+                        <a asp-action="Details" asp-route-id="@item.ProductID">&nbsp;&nbsp;&nbsp;Details&nbsp;&nbsp;&nbsp;</a>|
+                        <a asp-action="Delete" asp-route-id="@item.ProductID">&nbsp;&nbsp;&nbsp;Delete&nbsp;&nbsp;&nbsp;</a></h4>
                     </td>
                 </tr>
             }
