--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                         <img src="assets/images/logo.png" alt="GoodGames" width="199">
                     </a>
 
-                    <ul class="nk-nav nk-nav-center d-none d-lg-table-cell" data-nav-mobile="#nk-nav-mobile">
+                    <ul class="nk-nav nk-nav-center d-none d-md-table-cell" data-nav-mobile="#nk-nav-mobile">
 
                         <li class=" nk-drop-item">
                             <a asp-controller="Home" asp-action="Index">
@@ -77,13 +77,32 @@
                         <li class=" nk-drop-item">
                             <a asp-area="" asp-controller="Games" asp-action="Index">
                                 Games
-                            </a><ul class="dropdown">
-                                <li>
-                                    <a asp-controller="Games" asp-action="Details">Details</a>
-                                </li>
-                            </ul>
+                            </a>
                         </li>
-                    </ul>
+                        <li class=" nk-drop-item">
+                            <a asp-controller="Store" asp-action="Index">
+                                Store
+                            </a>
+                            <ul class="dropdown">
+                                <li>
+                                    <a asp-controller="Store" asp-action="Index">Store</a>
+                                </li>
+
+                                <li>
+                                    <a asp-controller="Store" asp-action="StoreCatalog">Catalog</a>
+                                </li>
+                                <li>
+                                <a asp-area="" asp-controller="Store" asp-action="StoreCart">
+                                    Cart
+                                </a>
+                                <a asp-area="" asp-controller="Store" asp-action="StoreCheckout">
+                                    Checkout
+                                </a>
+                                <a asp-controller="Store" asp-action="StoreProduct">
+                                    Product
+                                </a>
+                            </ul>
+</ul>
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
 
                         <li class="single-icon d-lg-none">
@@ -110,6 +129,68 @@
         <div class="container">
             &copy; 2021 - FowlerSite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
+
+        <!-- END: Login Modal -->
+        <!-- START: Scripts -->
+        <!-- Object Fit Polyfill -->
+        <script src="~/assets/vendor/object-fit-images/dist/ofi.min.js"></script>
+
+        <!-- GSAP -->
+        <script src="~/assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
+        <script src="~/assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
+
+        <!-- Popper -->
+        <script src="~/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+
+        <!-- Bootstrap -->
+        <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+
+        <!-- Sticky Kit -->
+        <script src="~/assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
+
+        <!-- Jarallax -->
+        <script src="~/assets/vendor/jarallax/dist/jarallax.min.js"></script>
+        <script src="~/assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
+
+        <!-- imagesLoaded -->
+        <script src="~/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+
+        <!-- Flickity -->
+        <script src="~/assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
+
+        <!-- Photoswipe -->
+        <script src="~/assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
+        <script src="~/assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
+
+        <!-- Jquery Validation -->
+        <script src="~/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+
+        <!-- Jquery Countdown + Moment -->
+        <script src="~/assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
+        <script src="~/assets/vendor/moment/min/moment.min.js"></script>
+        <script src="~/assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
+
+        <!-- Hammer.js -->
+        <script src="~/assets/vendor/hammerjs/hammer.min.js"></script>
+
+        <!-- NanoSroller -->
+        <script src="~/assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
+
+        <!-- SoundManager2 -->
+        <script src="~/assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
+
+        <!-- Seiyria Bootstrap Slider -->
+        <script src="~/assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+
+        <!-- Summernote -->
+        <script src="~/assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
+
+        <!-- nK Share -->
+        <script src="~/assets/plugins/nk-share/nk-share.js"></script>
+
+        <!-- GoodGames -->
+        <script src="~/assets/js/goodgames.min.js"></script>
+        <script src="~/assets/js/goodgames-init.js"></script>
     </footer>
     @RenderSection("Scripts", required: false)
 </body>
