--- a/FowlerSite/Views/Store/Index.cshtml
+++ b/FowlerSite/Views/Store/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Store";
+    ViewBag.Title = "Index";
 }
 
 <!DOCTYPE html>
@@ -142,223 +142,6 @@
             </div>
         </div>
         <!-- END: Top Contacts -->
-        <!--
-            START: Navbar
-
-            Additional Classes:
-                .nk-navbar-sticky
-                .nk-navbar-transparent
-                .nk-navbar-autohide
-        -->
-        <nav class="nk-navbar nk-navbar-top nk-navbar-sticky nk-navbar-autohide">
-            <div class="container">
-                <div class="nk-nav-table">
-
-                    <a href="index.html" class="nk-nav-logo">
-                        <img src="~/assets/images/logo.png" alt="GoodGames" width="199">
-                    </a>
-
-                    <ul class="nk-nav nk-nav-right d-none d-lg-table-cell" data-nav-mobile="#nk-nav-mobile">
-
-                        <li class=" nk-drop-item">
-                            <a href="elements.html">
-                                Features
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="elements.html">
-                                        Elements (Shortcodes)
-
-                                    </a>
-                                </li>
-                                <li class=" nk-drop-item">
-                                    <a href="forum.html">
-                                        Forum
-
-                                    </a><ul class="dropdown">
-
-                                        <li>
-                                            <a href="forum.html">
-                                                Forum
-
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="forum-topics.html">
-                                                Topics
-
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="forum-single-topic.html">
-                                                Single Topic
-
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="widgets.html">
-                                        Widgets
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="coming-soon.html">
-                                        Coming Soon
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="offline.html">
-                                        Offline
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="404.html">
-                                        404
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="blog-list.html">
-                                Blog
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="news.html">
-                                        News
-
-                                    </a>
-                                </li>
-                                <li class=" nk-drop-item">
-                                    <a href="blog-grid.html">
-                                        Blog With Sidebar
-
-                                    </a><ul class="dropdown">
-
-                                        <li>
-                                            <a href="blog-grid.html">
-                                                Blog Grid
-
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="blog-list.html">
-                                                Blog List
-
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="blog-fullwidth.html">
-                                        Blog Fullwidth
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="blog-article.html">
-                                        Blog Article
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="gallery.html">
-                                Gallery
-
-                            </a>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="tournaments.html">
-                                Tournaments
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="tournaments.html">
-                                        Tournament
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tournaments-teams.html">
-                                        Teams
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tournaments-teammate.html">
-                                        Teammate
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="active nk-drop-item">
-                            <a href="store.html">
-                                Store
-
-                            </a><ul class="dropdown">
-
-                                <li class="active">
-                                    <a asp-action="Store">
-                                        Store
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a asp-action="StoreProduct">
-                                        Product
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a asp-action="StoreCatalog">
-                                        Catalog
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a asp-action="StoreCheckout">
-                                        Checkout
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a asp-action="StoreCart">
-                                        Cart
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="nk-nav nk-nav-right nk-nav-icons">
-
-                        <li class="single-icon d-lg-none">
-                            <a href="#" class="no-link-effect" data-nav-toggle="#nk-nav-mobile">
-                                <span class="nk-icon-burger">
-                                    <span class="nk-t-1"></span>
-                                    <span class="nk-t-2"></span>
-                                    <span class="nk-t-3"></span>
-                                </span>
-                            </a>
-                        </li>
-
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- END: Navbar -->
 
     </header>
 
@@ -1104,67 +887,6 @@
             </div>
         </div>
     </div>
-    <!-- END: Login Modal -->
-    <!-- START: Scripts -->
-    <!-- Object Fit Polyfill -->
-    <script src="~/assets/vendor/object-fit-images/dist/ofi.min.js"></script>
-
-    <!-- GSAP -->
-    <script src="~/assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
-    <script src="~/assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
-
-    <!-- Popper -->
-    <script src="~/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
-
-    <!-- Bootstrap -->
-    <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- Sticky Kit -->
-    <script src="~/assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
-
-    <!-- Jarallax -->
-    <script src="~/assets/vendor/jarallax/dist/jarallax.min.js"></script>
-    <script src="~/assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
-
-    <!-- imagesLoaded -->
-    <script src="~/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-
-    <!-- Flickity -->
-    <script src="~/assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
-
-    <!-- Photoswipe -->
-    <script src="~/assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
-    <script src="~/assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
-
-    <!-- Jquery Validation -->
-    <script src="~/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
-
-    <!-- Jquery Countdown + Moment -->
-    <script src="~/assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
-    <script src="~/assets/vendor/moment/min/moment.min.js"></script>
-    <script src="~/assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
-
-    <!-- Hammer.js -->
-    <script src="~/assets/vendor/hammerjs/hammer.min.js"></script>
-
-    <!-- NanoSroller -->
-    <script src="~/assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
-
-    <!-- SoundManager2 -->
-    <script src="~/assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
-
-    <!-- Seiyria Bootstrap Slider -->
-    <script src="~/assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-
-    <!-- Summernote -->
-    <script src="~/assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
-
-    <!-- nK Share -->
-    <script src="~/assets/plugins/nk-share/nk-share.js"></script>
-
-    <!-- GoodGames -->
-    <script src="~/assets/js/goodgames.min.js"></script>
-    <script src="~/assets/js/goodgames-init.js"></script>
     <!-- END: Scripts -->
 
 
