Final navbar addition before presentation and images.

--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -102,6 +102,9 @@
                                     Product
                                 </a>
                             </ul>
+                            <li class=" nk-drop-item">
+                                <a asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                             </li>
 </ul>
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
 
