Added images to contact us

--- a/FowlerSite/Views/Home/ContactUs.cshtml
+++ b/FowlerSite/Views/Home/ContactUs.cshtml
@@ -359,11 +359,14 @@
                     <img src="~/assets/images/Casey.png" alt="casey.png" width="250"/></p>
 
                     <p>Michael
-                    <img src="~/assets/images/Michael.jpg" alt="michael.jpg" width="250" /></p
+                    <img src="~/assets/images/Michael.jpg" alt="michael.jpg" width="250" /></p>
 
-                    <p>Anthony</p>
+                    <p>
+                        Anthony
+                        <img src="~/assets/images/Anthony.jpg" alt="anthony.jpg" width="250" /></p>
 
-                    <p>Dominic</p>
+                    <p>Dominic
+                        <img src="~/assets/images/Dominic.png" alt="dominic.jpg" width="250" /></p>
                 </div>
                 <div class="col-lg-4">
                     <!--
