Added documents from sprint and some minor styling changes to contact us page

--- a/FowlerSite/Views/Store/Index.cshtml
+++ b/FowlerSite/Views/Store/Index.cshtml
@@ -433,7 +433,7 @@
                                 </a>
                                 <div class="nk-product-cont">
                                     <div class="nk-gap-1"></div>
-                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">She was bouncing away</a></h3>
+                                    <h3 class="nk-product-title h5"><a asp-action="StoreProduct">She was bouncing</a></h3>
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-price">$ 20.00</div>
                                 </div>
