--- a/FowlerSite/Views/Home/ContactUs.cshtml
+++ b/FowlerSite/Views/Home/ContactUs.cshtml
@@ -102,206 +102,6 @@
             </div>
         </div>
         <!-- END: Top Contacts -->
-        <!--
-            START: Navbar
-
-            Additional Classes:
-                .nk-navbar-sticky
-                .nk-navbar-transparent
-                .nk-navbar-autohide
-        -->
-        <nav class="nk-navbar nk-navbar-top nk-navbar-sticky nk-navbar-autohide">
-            <div class="container">
-                <div class="nk-nav-table">
-
-                    <a href="index.html" class="nk-nav-logo">
-                        <img src="~/assets/images/logo.png" alt="GoodGames" width="199">
-                    </a>
-
-                    <ul class="nk-nav nk-nav-right d-none d-lg-table-cell" data-nav-mobile="#nk-nav-mobile">
-
-                        <li class=" nk-drop-item">
-                            <a href="elements.html">
-                                Features
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="elements.html">
-                                        Elements (Shortcodes)
-
-                                    </a>
-                                </li>
-                                <li class=" nk-drop-item">
-                                    <a href="forum.html">Forum</a>
-                                    <ul class="dropdown">
-
-                                        <li>
-                                            <a href="forum.html">Forum</a>
-                                        </li>
-                                        <li>
-                                            <a href="forum-topics.html">Topics</a>
-                                        </li>
-                                        <li>
-                                            <a href="forum-single-topic.html">Single Topic </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="active">
-                                    <a href="@Url.Action("ContactUs","Home")">Contact Us</a>
-                                </li>
-                                <li>
-                                    <a href="coming-soon.html">Coming Soon</a>
-                                </li>
-                                <li>
-                                    <a href="offline.html">Offline</a>
-                                </li>
-                                <li>
-                                    <a href="404.html">404 </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="blog-list.html">
-                                Blog
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="news.html">
-                                        News
-
-                                    </a>
-                                </li>
-                                <li class=" nk-drop-item">
-                                    <a href="blog-grid.html">
-                                        Blog With Sidebar
-
-                                    </a><ul class="dropdown">
-
-                                        <li>
-                                            <a href="blog-grid.html">
-                                                Blog Grid
-
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="blog-list.html">
-                                                Blog List
-
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="blog-fullwidth.html">
-                                        Blog Fullwidth
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="blog-article.html">
-                                        Blog Article
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="gallery.html">
-                                Gallery
-
-                            </a>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="tournaments.html">
-                                Tournaments
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="tournaments.html">
-                                        Tournament
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tournaments-teams.html">
-                                        Teams
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tournaments-teammate.html">
-                                        Teammate
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class=" nk-drop-item">
-                            <a href="store.html">
-                                Store
-
-                            </a><ul class="dropdown">
-
-                                <li>
-                                    <a href="store.html">
-                                        Store
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a asp-action="StoreProduct">
-                                        Product
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-catalog.html">
-                                        Catalog
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-catalog-alt.html">
-                                        Catalog Alt
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a asp-controller="Store" asp-action="StoreCheckout">
-                                        Checkout
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-cart.html">
-                                        Cart
-
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="nk-nav nk-nav-right nk-nav-icons">
-
-                        <li class="single-icon d-lg-none">
-                            <a href="#" class="no-link-effect" data-nav-toggle="#nk-nav-mobile">
-                                <span class="nk-icon-burger">
-                                    <span class="nk-t-1"></span>
-                                    <span class="nk-t-2"></span>
-                                    <span class="nk-t-3"></span>
-                                </span>
-                            </a>
-                        </li>
-
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- END: Navbar -->
 
     </header>
 
@@ -342,7 +142,7 @@
 
         <div class="container">
             <div class="row vertical-gap">
-                <div class="col-lg-8">
+                <div class="col-lg-6">
                     <p>Welcome to GoodGames, where we can handle all of your gaming needs!</p>
 
                     <p>
@@ -356,17 +156,17 @@
                     <p><strong>Meet the team:</strong></p>
 
                     <p>Casey
-                    <img src="~/assets/images/Casey.png" alt="casey.png" width="250"/></p>
+                    <img src="~/assets/images/Casey.png" alt="casey.png" width="250" class="img-thumbnail contactImages"/></p>
 
                     <p>Michael
-                    <img src="~/assets/images/Michael.jpg" alt="michael.jpg" width="250" /></p>
+                    <img src="~/assets/images/Michael.jpg" alt="michael.jpg" width="250" class="img-thumbnail"/></p>
 
                     <p>
                         Anthony
-                        <img src="~/assets/images/Anthony.jpg" alt="anthony.jpg" width="250" /></p>
+                        <img src="~/assets/images/Anthony.jpg" alt="anthony.jpg" width="250" class="img-thumbnail"/></p>
 
                     <p>Dominic
-                        <img src="~/assets/images/Dominic.png" alt="dominic.jpg" width="250" /></p>
+                        <img src="~/assets/images/Dominic.png" alt="dominic.jpg" width="250" class="img-thumbnail"/></p>
                 </div>
                 <div class="col-lg-4">
                     <!--
@@ -377,7 +177,7 @@
                             .nk-sidebar-right
                             .nk-sidebar-sticky
                     -->
-                    <aside class="nk-sidebar nk-sidebar-right nk-sidebar-sticky">
+                    <aside class="nk-sidebar nk-sidebar-right">
                         <div class="nk-widget">
                             <div class="nk-widget-content">
                                 <form action="#" class="nk-form nk-form-style-1" novalidate="novalidate">
@@ -408,30 +208,6 @@
                             <li><a class="nk-social-facebook" href="https://www.facebook.com/PewDiePie/"><span class="fab fa-facebook"></span></a></li>
                             <li><a class="nk-social-youtube" href="https://www.youtube.com/c/VivaLaDirtLeague"><span class="fab fa-youtube"></span></a></li>
                             <li><a class="nk-social-twitter" href="https://twitter.com/vivadirt" target="_blank"><span class="fab fa-twitter"></span></a></li>
-
-                            <!-- Additional Social Buttons
-                                                    <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
-                                                    <li><a class="nk-social-bitbucket" href="#"><span class="fab fa-bitbucket"></span></a></li>
-                                                    <li><a class="nk-social-dropbox" href="#"><span class="fab fa-dropbox"></span></a></li>
-                                                    <li><a class="nk-social-dribbble" href="#"><span class="fab fa-dribbble"></span></a></li>
-                                                    <li><a class="nk-social-deviantart" href="#"><span class="fab fa-deviantart"></span></a></li>
-                                                    <li><a class="nk-social-flickr" href="#"><span class="fab fa-flickr"></span></a></li>
-                                                    <li><a class="nk-social-foursquare" href="#"><span class="fab fa-foursquare"></span></a></li>
-                                                    <li><a class="nk-social-github" href="#"><span class="fab fa-github"></span></a></li>
-                                                    <li><a class="nk-social-linkedin" href="#"><span class="fab fa-linkedin"></span></a></li>
-                                                    <li><a class="nk-social-medium" href="#"><span class="fab fa-medium"></span></a></li>
-                                                    <li><a class="nk-social-odnoklassniki" href="#"><span class="fab fa-odnoklassniki"></span></a></li>
-                                                    <li><a class="nk-social-paypal" href="#"><span class="fab fa-paypal"></span></a></li>
-                                                    <li><a class="nk-social-reddit" href="#"><span class="fab fa-reddit"></span></a></li>
-                                                    <li><a class="nk-social-skype" href="#"><span class="fab fa-skype"></span></a></li>
-                                                    <li><a class="nk-social-soundcloud" href="#"><span class="fab fa-soundcloud"></span></a></li>
-                                                    <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
-                                                    <li><a class="nk-social-slack" href="#"><span class="fab fa-slack"></span></a></li>
-                                                    <li><a class="nk-social-tumblr" href="#"><span class="fab fa-tumblr"></span></a></li>
-                                                    <li><a class="nk-social-vimeo" href="#"><span class="fab fa-vimeo"></span></a></li>
-                                                    <li><a class="nk-social-vk" href="#"><span class="fab fa-vk"></span></a></li>
-                                                    <li><a class="nk-social-wordpress" href="#"><span class="fab fa-wordpress"></span></a></li>
-                            -->
                         </ul>
                     </aside>
                     <!-- END: Sidebar -->
@@ -526,31 +302,6 @@
                     <div class="nk-copyright-left">
                     </div>
                     <div class="nk-copyright-right">
-
-                            <!-- Additional Social Buttons
-                                <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
-                                <li><a class="nk-social-bitbucket" href="#"><span class="fab fa-bitbucket"></span></a></li>
-                                <li><a class="nk-social-dropbox" href="#"><span class="fab fa-dropbox"></span></a></li>
-                                <li><a class="nk-social-dribbble" href="#"><span class="fab fa-dribbble"></span></a></li>
-                                <li><a class="nk-social-deviantart" href="#"><span class="fab fa-deviantart"></span></a></li>
-                                <li><a class="nk-social-flickr" href="#"><span class="fab fa-flickr"></span></a></li>
-                                <li><a class="nk-social-foursquare" href="#"><span class="fab fa-foursquare"></span></a></li>
-                                <li><a class="nk-social-github" href="#"><span class="fab fa-github"></span></a></li>
-                                <li><a class="nk-social-instagram" href="#"><span class="fab fa-instagram"></span></a></li>
-                                <li><a class="nk-social-linkedin" href="#"><span class="fab fa-linkedin"></span></a></li>
-                                <li><a class="nk-social-medium" href="#"><span class="fab fa-medium"></span></a></li>
-                                <li><a class="nk-social-odnoklassniki" href="#"><span class="fab fa-odnoklassniki"></span></a></li>
-                                <li><a class="nk-social-paypal" href="#"><span class="fab fa-paypal"></span></a></li>
-                                <li><a class="nk-social-reddit" href="#"><span class="fab fa-reddit"></span></a></li>
-                                <li><a class="nk-social-skype" href="#"><span class="fab fa-skype"></span></a></li>
-                                <li><a class="nk-social-soundcloud" href="#"><span class="fab fa-soundcloud"></span></a></li>
-                                <li><a class="nk-social-slack" href="#"><span class="fab fa-slack"></span></a></li>
-                                <li><a class="nk-social-tumblr" href="#"><span class="fab fa-tumblr"></span></a></li>
-                                <li><a class="nk-social-vimeo" href="#"><span class="fab fa-vimeo"></span></a></li>
-                                <li><a class="nk-social-vk" href="#"><span class="fab fa-vk"></span></a></li>
-                                <li><a class="nk-social-wordpress" href="#"><span class="fab fa-wordpress"></span></a></li>
-                                <li><a class="nk-social-youtube" href="#"><span class="fab fa-youtube"></span></a></li>
-                            -->
                     </div>
                 </div>
             </div>
@@ -644,69 +395,6 @@
             </div>
         </div>
     </div>
-    <!-- END: Login Modal -->
-    <!-- START: Scripts -->
-    <!-- Object Fit Polyfill -->
-    <script src="~/assets/vendor/object-fit-images/dist/ofi.min.js"></script>
-
-    <!-- GSAP -->
-    <script src="~/assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
-    <script src="~/assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
-
-    <!-- Popper -->
-    <script src="~/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
-
-    <!-- Bootstrap -->
-    <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- Sticky Kit -->
-    <script src="~/assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
-
-    <!-- Jarallax -->
-    <script src="~/assets/vendor/jarallax/dist/jarallax.min.js"></script>
-    <script src="~/assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
-
-    <!-- imagesLoaded -->
-    <script src="~/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-
-    <!-- Flickity -->
-    <script src="~/assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
-
-    <!-- Photoswipe -->
-    <script src="~/assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
-    <script src="~/assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
-
-    <!-- Jquery Validation -->
-    <script src="~/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
-
-    <!-- Jquery Countdown + Moment -->
-    <script src="~/assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
-    <script src="~/assets/vendor/moment/min/moment.min.js"></script>
-    <script src="~/assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
-
-    <!-- Hammer.js -->
-    <script src="~/assets/vendor/hammerjs/hammer.min.js"></script>
-
-    <!-- NanoSroller -->
-    <script src="~/assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
-
-    <!-- SoundManager2 -->
-    <script src="~/assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
-
-    <!-- Seiyria Bootstrap Slider -->
-    <script src="~/assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-
-    <!-- Summernote -->
-    <script src="~/assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
-
-    <!-- nK Share -->
-    <script src="~/assets/plugins/nk-share/nk-share.js"></script>
-
-    <!-- GoodGames -->
-    <script src="~/assets/js/goodgames.min.js"></script>
-    <script src="~/assets/js/goodgames-init.js"></script>
-    <!-- Functions -->
-    <!-- END: Scripts -->
 
 
 
